<?xml version="1.0"?>
<package>
  <name> pcd_processor </name>
  <version>1.0.0</version>
  <description> pcd_processor </description>

  <maintainer email="xxx@xxx.xxx">Subodh </maintainer>

  <license>BSD</license>

  <author >Subodh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>


  <build_depend>libpointmatcher_ros</build_depend>
  <run_depend>libpointmatcher_ros</run_depend>

  <build_depend>libpointmatcher_ros</build_depend>
  <run_depend>libpointmatcher_ros</run_depend>

</package>
